--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
         "email": "unclecheese@leftandmain.com"
     }],
     "require": {
-        "silverstripe/framework": "4.*"
+        "silverstripe/framework": "^5.0",
+        "php": "^8.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     },
     "extra": {
         "installer-name": "dropzone",
